--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,23 +1,23 @@
 
-<div id={{inform.title}} class="container py-6">
+<div id={{inform.title}} class="container py-6"> <!-- id allow to go directly to location of the content -->
     <div class="row flex-lg-row-reverse align-items-center g-5">
 		<div class="col-10 mx-auto col-sm-8 col-lg-6">
-			<img src={{inform.img}} alt="" loading="lazy">
+			<img src={{inform.img}} alt="" loading="lazy"> <!-- link of the image -->
 		</div>
 		<div class="col-lg-6">
 			<div class="lc-block mb-3">
 				<div editable="rich">
-					<h2 class="fw-bold display-5">{{inform.title}}</h2>
+					<h2 class="fw-bold display-5">{{inform.title}}</h2> <!-- title -->
 				</div>
 			</div>
 
 			<div class="lc-block mb-3">
 				<div editable="rich">
-					<p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.
-					</p>
+					<p class="lead">{{inform.description}}</p> <!-- description -->
 				</div>
 			</div>
 
+			<!-- buttons -->
 			<div class="lc-block d-grid gap-2 d-md-flex justify-content-md-start"><a class="btn btn-primary px-4 me-md-2" href="#" role="button">Click me, I'm a button</a>
 				<a class="btn btn-outline-secondary px-4" href="#" role="button">Click me, I'm a button</a>
 			</div>
