feature : theme page + routing
La page theme sera réutilisée pour les 4 thèmes de sujets. On passera en argument un paramètre qui déterminera les informations à charger sur la page.
Le routage permet d'aller chercher la même structure de page, et de donner des URL différentes à ces pages.

--> Maintenant quand on clique dans le header on est redirigé vers les bonnes URL

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,8 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
 <main class="main">
   <header><app-navbar></app-navbar></header>
   
   
-  <app-heroes></app-heroes>
-
+  <router-outlet></router-outlet>
   
   <app-footer></app-footer>
 </main>
-
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<!-- <router-outlet></router-outlet> -->
-
-
