--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
 
 
       <div class="dropdown">
-        <button class="dropbtn">{{a}} 
+        <button class="dropbtn" routerLink="/sinformer">{{a}} 
         <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
         </button>
         <div class="dropdown-content">
@@ -28,7 +28,7 @@
       </div>
       
       <div class="dropdown">
-        <button class="dropbtn">{{b}} 
+        <button class="dropbtn" routerLink="/reduire">{{b}} 
         <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
         </button>
         <div class="dropdown-content">
@@ -42,7 +42,7 @@
       </div> 
 
       <div class="dropdown">
-        <button class="dropbtn">{{c}} 
+        <button class="dropbtn" routerLink="/reutiliser">{{c}} 
         <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
         </button>
         <div class="dropdown-content">
@@ -56,7 +56,7 @@
       </div>
 
       <div class="dropdown">
-        <button class="dropbtn">{{d}} 
+        <button class="dropbtn" routerLink="/substituer">{{d}} 
         <i class="fa fa-caret-down"></i> <!-- This line of code represents an icon for a downward arrow. -->
         </button>
         <div class="dropdown-content">
@@ -68,7 +68,6 @@
           <a href="#">Link 6</a>
         </div>
       </div>
-      
 
         <form class="d-flex input-group w-auto">
           <input
