add home component : animation ok

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,5 +1,15 @@
 <br/>
 
+<section class="full-page-section">
+	<div class="home-background-image">
+		<img src="https://img.freepik.com/photos-gratuite/peinture-lac-montagne-montagne-arriere-plan_188544-9126.jpg?w=1380&t=st=1709805832~exp=1709806432~hmac=4fabaaa89e6614f6f3559673b65523f223ddbc89d8669543bd0c53559465b416" alt="Image description">
+	</div>
+	<div class="home-welcoming-text">
+		<h2>Text on top</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+	</div>
+</section>
+
 <div id={{inform.title}} class="container py-6"> <!-- id allow to go directly to location of the content -->
     <div class="row flex-lg-row-reverse align-items-center g-5">
 		<div class="col-10 mx-auto col-sm-8 col-lg-6">
