--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -38,7 +38,7 @@
 
 		<!--Grid column-->
 		<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-		<h5 class="text-uppercase mb-0">Peoples</h5>
+		<h5 class="text-uppercase mb-0">People</h5>
 
 		<ul class="list-unstyled">
 			<li>
