refactor home : better style

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .background-image {
-  background-image: url('https://fakeimg.pl/200x100');
+  background-image: url('../../assets/home-main.png');
   background-size: cover;
   background-position: center;
   height: 90vh;
@@ -12,6 +12,11 @@
 
 .welcome-text {
   padding: 20px;
+}
+
+.welcome-text h1 {
+  font-size: 200px;
+  margin-bottom: 20px;
 }
 
 .container {
@@ -36,4 +41,27 @@
   flex: 0 0 60%; /* Cela signifie que .text-container ne se réduira pas en dessous de 70%, ni ne s'étendra au-delà de 70% */
   padding-top: 5%;
   padding-bottom: 15%;
+}
+
+.theme-explaination-sinformer, .theme-explaination-reduire, .theme-explaination-reutiliser, .theme-explaination-substituer {
+  margin-top: 20px;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 15px;
+}
+
+.theme-explaination-sinformer {
+  background-color: #e07a5f;
+}
+
+.theme-explaination-reduire {
+  background-color: #f4f1de;
+}
+
+.theme-explaination-reutiliser {
+  background-color: #81b29a;
+}
+
+.theme-explaination-substituer {
+  background-color: #f2cc8f;
 }
