--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
     <div class="background-image">
         <div class="welcome-text">
-            <h1>Bienvenue sur notre site</h1>
+            <h1>Spiral</h1>
             <p>Découvrez comment réduire votre impact environnemental.</p>
         </div>
     </div>
@@ -11,20 +11,33 @@
             <img [src]="currentImage">
         </div>
         <div class="text-container">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repudiandae, adipisci incidunt eligendi, quae praesentium, placeat eum accusantium reprehenderit dolores nisi illum quisquam animi? Eligendi amet ex aliquid libero doloribus!</p>
+            <div class="theme-explaination-sinformer">
+                <h2>S'informer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+            </div>
+            <div class="theme-explaination-reduire">
+                <h2>Réduire</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+            </div>
+            <div class="theme-explaination-reutiliser">
+                <h2>Réutiliser</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+            </div>
+            <div class="theme-explaination-substituer">
+                <h2>Substituer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt non nihil architecto? Impedit nobis ex, aut, aliquam nihil labore ut, perspiciatis nisi quasi sunt nulla est illo excepturi enim?</p>
+            </div>
         </div>
     </div>
     
-
-
+    
+    
+    
